add footer and sign up page

--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center p-4 p-md-0 " style="margin:100px ;">
+<div class="d-flex justify-content-center p-4 p-md-0 " style="margin:100px 0px 0px 0px;">
     <form class="rounded p-3 col-12 col-md-4 my-4 shadow-lg bg-secondary" method="POST" action="/create-session">
         <h3 class="mb-4 text-center">Sign in</h3>
         <!-- Email input -->
